# 3-package-river_dolphin

./: Pipfile  README.md  pyproject.toml
.github/workflows/: Pipfile  build.yaml  event-logger.yml
examples/: demo.py
src/pydog/: __init__.py  __main__.py  core.py
tests/: test_core.py
